--- a/user.css
+++ b/user.css
@@ -386,3 +386,44 @@ margin-bottom: 10px;
 display: inline;
 margin: 0 10px;
 }
+
+
+
+
+
+.content-all {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: auto;
+  padding: 20px;
+  background-color: rgb(235, 230, 230);
+  color: rgba(10, 37, 105, 0.808);
+  display: flex;
+  flex-direction: column;
+  border-radius: 30px;
+}
+
+
+
+.body-color {
+  min-height: 100vh;
+  background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);
+  background-size: cover;
+  position: relative;
+}
+
+
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 60%);
+  
+}
+
+
+
