--- a/user.css
+++ b/user.css
@@ -105,9 +105,10 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: fixed;
   min-height: 97px;
   width: 100%;
+  background-color: #00000033;
 }
 header .container::after {
   content: "";
