--- a/user.css
+++ b/user.css
@@ -105,10 +105,9 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: relative;
   min-height: 97px;
   width: 100%;
-  background-color: #00000033;
 }
 header .container::after {
   content: "";
@@ -253,6 +252,17 @@ header nav .form i {
 
 
 /* card */
+.property-list{
+
+   display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 70px;
+}
+.card{
+  height: 600px;
+  width: 300px;
+  justify-content: center;
+}
 .btn{
 display: flex;
 justify-content: center;
@@ -425,6 +435,3 @@ margin: 0 10px;
     background-color: rgb(0 0 0 / 60%);
   
 }
-
-
-
