--- a/user.css
+++ b/user.css
@@ -52,7 +52,6 @@ background-color: #F2F5FA;
 color: #0C0C0D;
 font-size: 1.6rem;
 line-height: 24px;
-height: 300vh;
 }
 /* End Variables */
 /* Start Global Rules */
@@ -105,9 +104,10 @@ header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: fixed;
   min-height: 97px;
   width: 100%;
+  background-color: #0000005a;
 }
 header .container::after {
   content: "";
@@ -171,8 +171,8 @@ header nav ul li a {
 }
 header nav ul li a.active,
 header nav ul li a:hover {
-  color: var(--main-color);
-  border-bottom: 1px solid var(--main-color);
+  color: #FFC107;
+  border-bottom: 1px solid #FFEB3B;
 }
 header nav .form {
   width: 40px;
@@ -196,7 +196,8 @@ header nav .form i {
 /* Start home-main */
 .home-main {
   min-height: 100vh;
-  background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);
+  /* background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d); */
+  background-image: url("/home.wallpaper.jpg");
   background-size: cover;
   position: relative;
 }
@@ -362,41 +363,49 @@ visibility: visible;
 }
 
 
-/* footer */
 .footer {
-background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);
-color: #fff;
-padding: 20px 0;
-text-align: center;
-font-size: 14px;
-display: flex;
-flex-direction: column;
-align-items: center;
+  position: relative; 
+  bottom: 0; 
+  left: 0;
+  width: 100%; /* Take the full width of the viewport */
+  background-image: linear-gradient(270deg, #111111, #000000, #000000);
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px groove;
+  border-color: black;
 }
 
-.footer p {
-margin: 5px 0;
-}
 
-.footer a {
-color: #fff;
-text-decoration: none;
-}
 
-.footer a:hover {
-text-decoration: underline;
-}
 
-.footer-links {
-list-style-type: none;
-padding: 0;
-margin-bottom: 10px;
-}
-
-.footer-links li {
-display: inline;
-margin: 0 10px;
-}
+  .footer p {
+  margin: 5px 0;
+  }
+  
+  .footer a {
+  color: #fff;
+  text-decoration: none;
+  }
+  
+  .footer a:hover {
+  text-decoration: underline;
+  }
+  
+  .footer-links {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 10px;
+  }
+  
+  .footer-links li {
+  display: inline;
+  margin: 0 10px;
+  }
 
 
 
@@ -420,7 +429,7 @@ margin: 0 10px;
 
 .body-color {
   min-height: 100vh;
-  background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);
+  background-image: linear-gradient(270deg, #111111, #000000, #000000);
   background-size: cover;
   position: relative;
 }
