--- a/userViweListStyle.css
+++ b/userViweListStyle.css
@@ -3,101 +3,149 @@
   --transparent-color: rgb(15 116 143 / 70%);
   --section-padding: 100px;
 }
-*{
-    margin:0;
-    padding: 0;
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
+ul{
+  list-style: none;
+}
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Small */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+/* Large */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+/* End Global Rules */
+
 body{
     padding-top: 97px;
-    background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);
+    background-image: linear-gradient(270deg, #111111, #000000, #000000);
     font-family: "Open Sans", sans-serif;
     background-color: #F2F5FA;
     color: #0C0C0D;
     font-size: 1.2rem;
     line-height: 12px;
-    height: 300vh;
 }
-
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000; /* Ensure the header is on top of other content */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow to header */
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  top: 0;
 }
 header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    min-height: 97px;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  min-height: 97px;
+  width: 100%;
+  background-color: #0000005a;
 }
 header .container::after {
-    content: "";
-    position: absolute;
-    height: 1px;
-    background-color: #a2a2a2;
-    bottom: 0;
-    width: calc(100% - 30px);
-    left: 15px;
+  content: "";
+  position: absolute;
+  height: 1px;
+  background-color: #a2a2a2;
+  bottom: 0;
+  width: calc(100% - 30px);
+  left: 15px;
 }
 header .logo img {
-    height: 40px;
+  height: 40px;
 }
 header nav {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
+
 header nav .toggle-menu {
-    color: white;
-    font-size: 22px;
+  color: white;
+  font-size: 22px;
 }
-  
-  @media (min-width: 768px) {
-    header nav .toggle-menu {
-      display: none;
-    }
+
+@media (min-width: 768px) {
+  header nav .toggle-menu {
+    display: none;
   }
-  
+}
+
+header nav ul {
+  display: flex;
+}
+@media (max-width: 767px) {
   header nav ul {
-    display: flex;
+    display: none;
   }
-  @media (max-width: 767px) {
-    header nav ul {
-      display: none;
-    }
-    header nav .toggle-menu:hover + ul {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      background-color: rgb(0 0 0 / 50%);
-    }
-    header nav ul li a {
-      padding: 15px !important;
-    }
+  header nav .toggle-menu:hover + ul {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: rgb(0 0 0 / 50%);
   }
   header nav ul li a {
-    padding: 40px 10px;
-    display: block;
-    color: white;
-    text-decoration: none;
-    font-size: 14px;
-    transition: 0.3s;
-    position: relative;
-    z-index: 2;
+    padding: 15px !important;
+  }
+}
+header nav ul li a {
+  padding: 40px 10px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  transition: 0.3s;
+  position: relative;
+  z-index: 2;
 }
 header nav ul li a.active,
 header nav ul li a:hover {
-    color: var(--main-color);
-    border-bottom: 1px solid var(--main-color);
+  color: #FFC107;
+  border-bottom: 1px solid #FFEB3B;
 }
+header nav .form {
+  width: 40px;
+  height: 30px;
+  position: relative;
+  margin-left: 30px;
+  border-left: 1px solid white;
+}
+header nav .form i {
+  color: white;
+  position: absolute;
+  font-size: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+}
+/* End Header */
 a{
     columns: inherit;
     text-decoration: none;
@@ -122,23 +170,22 @@ button:hover{
 }
 .add {
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     display: block; /* Change display property */
-    background-color: rgb(0, 0, 0);
     margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px; /* Add margin-right for spacing */
     padding: 10px 20px; /* Add padding for spacing */
-    border-radius: 25px;
+    border-radius: 20px;
     width: fit-content; /* Adjust width based on content */
     margin: 20px auto;
-    box-shadow: 0 4px 6px rgba(10, 24, 21, 1); /* Add box shadow */
+    box-shadow: 0 4px 6px rgb(52, 114, 101); /* Add box shadow */
 }
 .outputs{
     position: absolute;
     width: 100%;
     z-index: 0;
-    background-color: #071224;
+    /* background-color: #153b78; */
     margin-top: 50px;
     border-radius: 25px;
     color: #F2F5FA;
@@ -147,6 +194,9 @@ button:hover{
     width: 100%;
     text-align: center;
     margin: 10px 0;
+    color: #000000;
+    background-color: rgb(202, 197, 197);
+    border-radius: 20px;
     
 }
 .dash th{
@@ -155,3 +205,52 @@ button:hover{
 .dash th,td{
     padding: 5px;
 }
+
+
+
+
+/* footer */
+.footer {
+  position: relative; 
+  bottom: 0; 
+  left: 0;
+  width: 100%; /* Take the full width of the viewport */
+  background-image: linear-gradient(270deg, #111111, #000000, #000000);
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px groove;
+  border-color: black;
+}
+
+
+
+
+  .footer p {
+  margin: 5px 0;
+  }
+  
+  .footer a {
+  color: #fff;
+  text-decoration: none;
+  }
+  
+  .footer a:hover {
+  text-decoration: underline;
+  }
+  
+  .footer-links {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 10px;
+  }
+  
+  .footer-links li {
+  display: inline;
+  margin: 0 10px;
+  }
+
